DIAC-2408 springboot 3.5 java 21 upgrade (#550)
* springboot 2.x -> 3.0

* springboot 3.0 -> 3.1

* springboot 3.1 -> 3.2

* springboot 3.2 -> 3.3

* springboot 3.3 -> 3.4

* springboot 3.4 -> 3.5

* java 17 -> 21

* buld gradle clean up

* contract test fixes

* pipeline fix?

* Revert "pipeline fix?"

This reverts commit 902e1941971bcc2ba6c50e83fcc3656db1ffc12a.

* coverage

* coverage

* checkstyle

* pact fix

* adding local suppression file back

* improving EventTest

* fixing dependency check and CVEs

* removing unneeded suppression

* dropping uk.gov.hmcts.java version

* suppressing false positive

* uk.gov.hmcts.java bump

* removing false positive suppressions

* owasp bump

* tomcat global bump

* netty bump

* bumping azure sdk bom

* suppress false MS positive

* adding test retry

* topic fixes

* topic fix v2

* topic fix v2

* topic fix v3

* topic fix v4

* topic fix v5

* DIAC-2408 - set shared subscription in jms factory

* Revert "DIAC-2408 - set shared subscription in jms factory"

This reverts commit d09a303daac1a92f1f70300234302f25a66f37f0.

* Revert "topic fix v5"

This reverts commit e1b37baf47903904d648f7a3916f50bf4141d518.

* Revert "topic fix v4"

This reverts commit c4fefd7bf2966762f545318c73bd3643facd27c4.

* Revert "topic fix v3"

This reverts commit c9d7e82e0220e06730cff39409be7ad7de690a4b.

* Revert "topic fix v2"

This reverts commit 32d9ca448859404b9d4e2959e4a6c8f7a6491344.

* Revert "topic fix v2"

This reverts commit 848dd4694af371f3a451223610c2490d27d0910e.

* Revert "topic fixes"

This reverts commit 7c158f4120781cfbccb789d64c5d80bcffb22c07.

* fix

* checkstyle fix

* fix for functional

---------

Co-authored-by: kleog <kleogeorgiou@hotmail.com>